`//configure` now supports all configurable fields, not just annotated ones